# aseprite-thumbnails-kde

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  aseprite_thumbnails.cpp  aseprite_thumbnails.h  aseprite_thumbnails.json
